--- a/projects.html
+++ b/projects.html
@@ -115,18 +115,18 @@
           <h1>how well do you know me?</h1>
           <small>November, 2020</small>
           <p>
-            A CLI app built with <strong>nodeJS</strong>. You can send this to
-            your friends and find out who really knows you
+            A CLI app built with <strong>NodeJS</strong>. A quiz on me, how well
+            do you know me.
           </p>
 
           <a
             class="link link-primary"
-            href="https://repl.it/@tanaypratap/end-game?embed=true"
+            href="https://repl.it/@AmarjitSingh2/CLI-App-2?embed=true"
             >Live Project</a
           >
           <a
             class="link link-secondary"
-            href="https://github.com/tanaypratap/neogcamp-cli-project-1"
+            href="https://github.com/Amarjit-Singh-1/CLI-App-Quiz.git"
             >View Source</a
           >
         </article>
@@ -134,20 +134,21 @@
 
       <li>
         <article class="showcase-list container container-center">
-          <h1>are you a marvel fan?</h1>
+          <h1>Are you a Office fan?</h1>
           <small>November, 2020</small>
           <p>
-            Do you know marvel cinematic universe? Let's play a quiz and see.
+            A CLI app built with <strong>NodeJS</strong>. Do you know Office
+            Series? Let's play a quiz and see.
           </p>
 
           <a
             class="link link-primary"
-            href="https://repl.it/@tanaypratap/quiz-on-marvel?embed=true"
+            href="https://repl.it/@AmarjitSingh2/CLI-App-5?embed=true"
             >Live Project</a
           >
           <a
             class="link link-secondary"
-            href="https://github.com/tanaypratap/neogcamp-quiz-on-marvel"
+            href="https://github.com/Amarjit-Singh-1/The-Office-Quiz.git"
             >View Source</a
           >
         </article>
