--- a/projects.html
+++ b/projects.html
@@ -74,23 +74,32 @@
 
       <li>
         <article class="showcase-list container container-center">
-          <h1>yoda speak</h1>
-          <small>November, 2020</small>
+          <h1>Groot speak</h1>
+          <small>January, 2021</small>
           <p>
-            Convert from English to Yoda speak. Yoda often orders sentences as
-            Object-Subject-Verb, split verbs, switches entire phrases and
-            sometimes uses sentences that are different from his normal syntax!
+            Convert from English to Groot speak. Are you a fan of Marvel's
+            Guardians of the Galaxy? Did you know that what Groot says is an
+            actual language. Use the translator to convert your text from
+            English to Groot speak or Groot language.
           </p>
 
-          <a class="link link-primary" href="assignments.html">Live Project</a>
-          <a class="link link-secondary" href="assignments.html">View Source</a>
+          <a
+            class="link link-primary"
+            href="https://groot-speak-translator.netlify.app/"
+            >Live Project</a
+          >
+          <a
+            class="link link-secondary"
+            href="https://github.com/Amarjit-Singh-1/Groot-Translator"
+            >View Source</a
+          >
         </article>
       </li>
 
       <li>
         <article class="showcase-list container container-center">
-          <h1>minionese</h1>
-          <small>November, 2020</small>
+          <h1>Minionese</h1>
+          <small>January, 2021</small>
           <p>
             Are you a fan of minions? Did you know that the gibberish they say
             is an actual language. Use the translator to convert your text from
@@ -99,12 +108,12 @@
 
           <a
             class="link link-primary"
-            href="https://github.com/tanaypratap/neogcamp-banana-speak"
+            href="https://minions-banana-speak.netlify.app/"
             >Live Project</a
           >
           <a
             class="link link-secondary"
-            href="https://bananaspeakpractice.netlify.app/"
+            href="https://github.com/Amarjit-Singh-1/Banana-speak"
             >View Source</a
           >
         </article>
@@ -113,7 +122,7 @@
       <li>
         <article class="showcase-list container container-center">
           <h1>how well do you know me?</h1>
-          <small>November, 2020</small>
+          <small>December, 2020</small>
           <p>
             A CLI app built with <strong>NodeJS</strong>. A quiz on me, how well
             do you know me.
@@ -135,7 +144,7 @@
       <li>
         <article class="showcase-list container container-center">
           <h1>Are you a Office fan?</h1>
-          <small>November, 2020</small>
+          <small>December, 2020</small>
           <p>
             A CLI app built with <strong>NodeJS</strong>. Do you know Office
             Series? Let's play a quiz and see.
