--- a/index.html
+++ b/index.html
@@ -64,14 +64,14 @@
     </section>
 
     <footer class="footer">
-      <div class="footer-header">social media presence</div>
+      <div class="footer-header">Social Media Presence</div>
       <ul class="social-links list-non-bullet">
         <li class="list-item-inline">
-          <a class="link" href="https://github.com/Amarjit-Singh-1"> github </a>
+          <a class="link" href="https://github.com/Amarjit-Singh-1"> Github </a>
         </li>
         <li class="list-item-inline">
           <a class="link" href="https://www.hackerrank.com/amarjitsingh9921">
-            hackerrank
+            Hackerrank
           </a>
         </li>
         <li class="list-item-inline">
@@ -79,7 +79,7 @@
             class="link"
             href="https://www.linkedin.com/in/amarjit-singh-b3717b194/"
           >
-            linkedin
+            Linkedin
           </a>
         </li>
       </ul>
