--- a/blogs.html
+++ b/blogs.html
@@ -25,16 +25,17 @@
     </nav>
 
     <header class="hero">
+      <img class="hero-img" src="images/blogs.svg" />
       <h1 class="hero-heading">
-        read my <span class="heading-inverted">blogs</span>
+        Read my <span class="heading-inverted">Blogs</span>
       </h1>
     </header>
 
     <ul class="list-non-bullet">
       <li>
         <article class="showcase-list container container-center">
-          <h1>dummy blog one</h1>
-          <small>November, 2020</small>
+          <h1>Dummy Blog One</h1>
+          <small>January, 2020</small>
           <p>
             The most well-known dummy text is the 'Lorem Ipsum', which is said
             to have originated in the 16th century. Lorem Ipsum is composed in a
@@ -42,14 +43,14 @@
             Latin. It contains a series of real Latin words.
           </p>
 
-          <a class="link link-primary" href="#">Read More</a>
+          <a class="link link-primary" href="./blog-listing.html">Read More</a>
         </article>
       </li>
 
       <li>
         <article class="showcase-list container container-center">
-          <h1>second dummy blog</h1>
-          <small>November, 2020</small>
+          <h1>Dummy Blog Two</h1>
+          <small>January, 2020</small>
           <p>
             Dummy text: Its function as a filler or as a tool for comparing the
             visual impression of different typefaces Dummy text is text that is
@@ -59,20 +60,20 @@
             Dummy text is also known as 'fill text'.
           </p>
 
-          <a class="link link-primary" href="#">Read More</a>
+          <a class="link link-primary" href="./blog-listing.html">Read More</a>
         </article>
       </li>
     </ul>
 
     <footer class="footer">
-      <div class="footer-header">social media presence</div>
+      <div class="footer-header">Social Media Presence</div>
       <ul class="social-links list-non-bullet">
         <li class="list-item-inline">
-          <a class="link" href="https://github.com/Amarjit-Singh-1"> github </a>
+          <a class="link" href="https://github.com/Amarjit-Singh-1"> Github </a>
         </li>
         <li class="list-item-inline">
           <a class="link" href="https://www.hackerrank.com/amarjitsingh9921">
-            hackerrank
+            Hackerrank
           </a>
         </li>
         <li class="list-item-inline">
@@ -80,7 +81,7 @@
             class="link"
             href="https://www.linkedin.com/in/amarjit-singh-b3717b194/"
           >
-            linkedin
+            Linkedin
           </a>
         </li>
       </ul>
