--- a/projects.html
+++ b/projects.html
@@ -27,26 +27,26 @@
     <header class="hero">
       <img class="hero-img" src="images/projects.svg" />
       <h1 class="hero-heading">
-        see my <span class="heading-inverted"> code</span>
+        See my <span class="heading-inverted"> Code</span>
       </h1>
     </header>
 
     <ul class="list-non-bullet">
       <li>
         <article class="showcase-list container container-center">
-          <h1>goodbooks</h1>
-          <small>December, 2020</small>
+          <h1>Movie Recommendation App</h1>
+          <small>January, 2021</small>
           <p>
-            Do you read books? You would find some good recommendations for all
-            the genre. Made using ReactJS with love
+            Do you watch Movies? You would find some good recommendations for
+            all the genre. Made using ReactJS using Hooks.
           </p>
 
-          <a class="link link-primary" href="https://hiq3h.csb.app/"
+          <a class="link link-primary" href="https://66zmt.csb.app/"
             >Live Project</a
           >
           <a
             class="link link-secondary"
-            href="https://github.com/tanaypratap/neogcamp-lesson-five-assignments"
+            href="https://github.com/Amarjit-Singh-1/Movie-Recommendation-App"
             >View Source</a
           >
         </article>
@@ -54,19 +54,20 @@
 
       <li>
         <article class="showcase-list container container-center">
-          <h1>emoji interpreter</h1>
-          <small>December, 2020</small>
+          <h1>Emoji Interpreter😊</h1>
+          <small>January, 2021</small>
           <p>
             I struggle with understanding the emojis. Do you too? If yes, then
-            see this library of emojis with meaning
+            visit this page where you can get the meaning of the emojis just by
+            clicking on them!
           </p>
 
-          <a class="link link-primary" href="https://l4w0y.csb.app/"
+          <a class="link link-primary" href="https://8k094.csb.app/"
             >Live Project</a
           >
           <a
             class="link link-secondary"
-            href="https://github.com/tanaypratap/neogcamp-practice-emoji-app"
+            href="https://github.com/Amarjit-Singh-1/Emoji-Interpreter"
             >View Source</a
           >
         </article>
@@ -121,7 +122,7 @@
 
       <li>
         <article class="showcase-list container container-center">
-          <h1>how well do you know me?</h1>
+          <h1>How well do you know me?</h1>
           <small>December, 2020</small>
           <p>
             A CLI app built with <strong>NodeJS</strong>. A quiz on me, how well
@@ -165,14 +166,14 @@
     </ul>
 
     <footer class="footer">
-      <div class="footer-header">social media presence</div>
+      <div class="footer-header">Social Media Presence</div>
       <ul class="social-links list-non-bullet">
         <li class="list-item-inline">
-          <a class="link" href="https://github.com/Amarjit-Singh-1"> github </a>
+          <a class="link" href="https://github.com/Amarjit-Singh-1"> Github </a>
         </li>
         <li class="list-item-inline">
           <a class="link" href="https://www.hackerrank.com/amarjitsingh9921">
-            hackerrank
+            Hackerrank
           </a>
         </li>
         <li class="list-item-inline">
@@ -180,7 +181,7 @@
             class="link"
             href="https://www.linkedin.com/in/amarjit-singh-b3717b194/"
           >
-            linkedin
+            Linkedin
           </a>
         </li>
       </ul>
